PROJECT(AUTOPROD)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)

FIND_PACKAGE(GTK2 REQUIRED)
FIND_PACKAGE(Glade REQUIRED)
FIND_PACKAGE(MLT REQUIRED)

INCLUDE_DIRECTORIES(
	${AUTOPROD_SOURCE_DIR}/lua/include
	${MLT_INCLUDE_DIRS}
	${GTK2_INCLUDE_DIRS}
	${GLADE_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
	${AUTOPROD_SOURCE_DIR}/lua
)

SET(CONFIG_LUA "config.lua")

ADD_CUSTOM_COMMAND(
	OUTPUT  ${AUTOPROD_BINARY_DIR}/${CONFIG_LUA}.o
	COMMAND ln -sf ${AUTOPROD_SOURCE_DIR}/${CONFIG_LUA} .
	COMMAND objcopy --input binary --output elf32-i386 --binary-architecture i386 ${CONFIG_LUA} ${CONFIG_LUA}.o
	DEPENDS ${CONFIG_LUA}
	COMMENT "Objectifying ${CONFIG_LUA}..."
)

SET(AUTOPROD_GLADE "autoprod.glade")

ADD_CUSTOM_COMMAND(
	OUTPUT  ${AUTOPROD_BINARY_DIR}/${AUTOPROD_GLADE}.o
	COMMAND ln -sf ${AUTOPROD_SOURCE_DIR}/${AUTOPROD_GLADE} .
	COMMAND objcopy --input binary --output elf32-i386 --binary-architecture i386 ${AUTOPROD_GLADE} ${AUTOPROD_GLADE}.o
	DEPENDS ${AUTOPROD_GLADE}
	COMMENT "Objectifying ${AUTOPROD_GLADE}..."
)

ADD_EXECUTABLE(
	# exe
	autoprod

	# sources
	autoprod.c
	inigo.c
	montage.c

	# headers
	autoprod.h
	
	# objects
	${AUTOPROD_BINARY_DIR}/${CONFIG_LUA}.o
	${AUTOPROD_BINARY_DIR}/${AUTOPROD_GLADE}.o
)

ADD_DEFINITIONS(-DLUA_USE_LINUX)

TARGET_LINK_LIBRARIES(
	# exe
	autoprod

	# libs
	lua
	${GTK2_LIBRARIES}
	${GLADE_LIBRARIES}
	${MLT_LIBRARIES}
)

